--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,14 +10,15 @@ html{
     font-size: 62.5%;
 }
 
+
 /* ------------------------------ ESTILOS HEADER -------------- */ 
 .header{ 
 
     background-color: #574c46;
     opacity: .9;
     display: grid;
-    width: 100vw;
-    height: 25vh;
+    width: 100%;
+    height: 35%;
     grid-template-columns: 20% 80%;
     grid-template-rows: auto;
     align-items: center;
@@ -35,7 +36,6 @@ html{
 }
 .header__lista{
     display: flex;
-
 }
 
 .header__item{
